<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PrefsActivity">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent">
        <TextView
                android:text="@string/when_bixby_clicked"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView"/>
        <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/searchRadioGroup">
            <RadioButton
                    android:text="@string/search_activity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/searchRadioButton" android:layout_weight="1"/>
            <RadioButton
                    android:text="@string/voice_activity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/voiceRadioButton" android:layout_weight="1"/>
            <RadioButton
                    android:text="@string/assistant_activity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/assistantRadioButton"
                    android:layout_weight="1"/>
        </RadioGroup>
        <TextView
                android:text="@string/activate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView2" android:layout_marginBottom="15dp"/>
        <Button
                android:text="@string/save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/confirmButton"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>